[Polyam] Prevent text wrapping in Badge component
Port 298fc7ce4c86fd3a723937ae47090eda3b70ddce to polyam-glitch

--- a/app/javascript/flavours/polyam/components/badge/styles.module.scss
+++ b/app/javascript/flavours/polyam/components/badge/styles.module.scss
@@ -13,9 +13,9 @@
   gap: 4px;
   border-radius: 8px;
   align-items: center;
-  overflow-wrap: anywhere;
 
   > svg {
+    flex-shrink: 0;
     width: auto;
     height: 12px; // Polyam: Reduced icon size
     fill: currentColor;
@@ -31,6 +31,12 @@
   &:not(.badgeWithoutIcon) {
     padding-inline-end: 8px;
   }
+}
+
+.content {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .domain {
